name:                tasty-bug
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          tasty.bugs@monoid.al
build-type:          Simple
cabal-version:       >=1.10

executable tasty-bug
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010
  build-depends: tasty-th >= 0.1 && < 0.2
